# stepone

./: .gitignore  CMakeLists.txt  Makefile  README.md  basefunc.cpp  basefunc.h  basemacro.cpp  basemacro.h  basenumfunc.cpp  basenumfunc.h  bytearray.cpp  bytearray.h  core.cpp  core.h  dbg.h  fastparser.cpp  fastparser.h  floats.h  funcstemp.h  initlib.txt  integers.h  main.cpp  numbers.h  numfunctemp.h  repl.h  stepone.cpp  stepone.files  stepone.h  stepone.includes  stepone.pro  test.h  test.txt  tuple.cpp  tuple.h  typepredicates.cpp  typepredicates.h  typestemp.h
docs/: README.md  about_stepone.md  about_stepone.txt  conception.md  features.md  ideas.md  implementation.md  std.md
incubator/: README.md  std.stp1
other/: std.txt  test.txt  testfile.txt  testinitlib.txt
src/: CMakeLists.txt  basefunc.cpp  basefunc.h  basefunc_obs.cpp  basefunc_obs.h  basefunc_ops.h  basemacro.cpp  basemacro.h  basemacro_obs.cpp  basemacro_obs.h  basenumfunc.cpp  basenumfunc.h  basenumfunc_obs.cpp  basesymbols.cpp  basesymbols.h  bytearray.cpp  bytearray.h  bytearray_obs.cpp  bytearray_obs.h  bytearray_ops.h  core.cpp  core.h  core_defines.h  cppoperators.h  dbg.h  fastparser.cpp  fastparser.h  fistparser.cpp  fistparser.h  initevaluator.cpp  initevaluator.h  initsymbols.cpp  initsymbols.h  integers.h  io.cpp  io.h  io_obs.cpp  io_obs.h  io_ops.h  macro.cpp  (+25 more)
src/base/: basefunc_obs.cpp  basefunc_obs.h  basefunc_ops.h  basemacro_obs.cpp  basemacro_obs.h  basenumfunc_obs.cpp  basenumfunc_obs.h  basesymbols.cpp  basesymbols.h  bytearray_obs.cpp  bytearray_obs.h  bytearray_ops.h  initevaluator.cpp  initsymbols.cpp  io_obs.cpp  io_obs.h  io_ops.h  typepredicates_obs.cpp  typepredicates_obs.h  typepredicates_ops.h  vector_obs.cpp  vector_obs.h  vector_ops.h
src/core/: base.cpp  basemacro.cpp  bytearray.cpp  core.cpp  io.cpp  macro.cpp  ob.cpp  type_info.cpp  value.cpp  vector.cpp
src/impl/: dbg.cpp  logging.cpp  ob.cpp
src/impl/base/: basemacro.cpp
src/impl/core/: bytearray.cpp  core.cpp  io.cpp  macro.cpp  ob.cpp  type_info.cpp  value.cpp  vector.cpp
src/impl/include/: ob.h  ptr_impl.h  util.h
src/impl/include/base/: basemacro.h  operations.h
src/impl/include/core/: bytearray.h  core.h  ob.h  type_flags.h  type_tag_map.h  value.h  vector.h
src/impl/include/objects/: basemacro_obs.h  basenumfunc_obs.h  bytearray_obs.h  typepredicates_obs.h  vector_obs.h
src/impl/include/operations/: basefunc_ops.h  bytearray_ops.h  typepredicates_ops.h  value_operations.h  vector_ops.h
src/impl/init/: initevaluator.cpp  initsymbols.cpp
src/impl/objects/: basefunc_obs.cpp  basefunc_obs.h  basemacro_obs.cpp  basemacro_obs.h  basenumfunc_obs.cpp  basenumfunc_obs.h  bytearray_obs.cpp  bytearray_obs.h  io_obs.cpp  typepredicates_obs.cpp  vector_obs.cpp
src/impl/symbols/: basesymbols.cpp  basesymbols.h
src/include/: base.h  basemacro.h  bytearray.h  core.h  io.h  macro.h  ob.h  operations.h  ptr_impl.h  type_flags.h  type_info.h  type_info_inst.h  value.h  vector.h
src/include/base/: initevaluator.h  initsymbols.h
src/include/impl/: ptr_impl.h
src/include/impl/base/: operations.h
src/include/impl/core/: io.h  ob.h  type_flags.h  type_info.h  type_info_inst.h  vector.h
src/include/impl/operations/: basefunc_ops.h  io_ops.h
src/include/init/: initevaluator.h
src/include/parser/: fistparser.h
src/include/stepone/: dbg.h  error_exception.h  ptr.h
src/include/stepone/impl/: ptr_impl.h
src/include/stepone/impl/base/: basemacro.h  operations.h
src/include/stepone/impl/core/: bytearray.h  core.h  io.h  macro.h  ob.h  type_flags.h  type_info.h  type_info_inst.h  value.h  vector.h
src/include/stepone/impl/objects/: basefunc_obs.h  basemacro_obs.h  basenumfunc_obs.h  bytearray_obs.h  io_obs.h  stepone_obs.h  typepredicates_obs.h  vector_obs.h
src/include/stepone/impl/operations/: basefunc_ops.h  bytearray_ops.h  cppoperators.h  io_ops.h  typepredicates_ops.h  value_operations.h  vector_ops.h
src/include/stepone/impl/symbols/: basesymbols.h
src/include/stepone/init/: initevaluator.h  initsymbols.h
src/include/stepone/parser/: firstparser.h
src/init/: initevaluator.cpp  initsymbols.cpp
src/parser/: firstparser.cpp  firstparser.h  fistparser.cpp  fistparser.h
src/repl/: initevaluator.cpp  initsymbols.cpp  main.cpp  repl.cpp  repl.h
src/runtime/: ob.cpp
src/runtime/base/: basemacro.cpp
src/runtime/builtin/: basemacro.cpp
src/runtime/core/: bytearray.cpp  core.cpp  vector.cpp
src/runtime/include/: ob.h  ptr_impl.h
src/runtime/include/base/: operations.h
src/runtime/include/builtin/: basemacro.h  operations.h
src/runtime/include/core/: core.h  macro.h
src/runtime/include/objects/: basefunc_obs.h  basemacro_obs.h  typepredicates_obs.h
src/runtime/include/operations/: basefunc_ops.h  bytearray_ops.h  value_operations.h  vector_ops.h
src/runtime/include/types/: bytearray.h  core.h  macro.h  value.h  vector.h
src/runtime/objects/: basefunc_obs.cpp  basemacro_obs.cpp  basenumfunc_obs.cpp  bytearray_obs.cpp  typepredicates_obs.cpp  vector_obs.cpp
src/runtime/types/: bytearray.cpp  core.cpp  macro.cpp  vector.cpp
src/test/: info.cpp  main.cpp  parser.cpp  runtime.cpp  test.cpp  test.h
